[gd_scene load_steps=4 format=3 uid="uid://cchpodvflog4f"]

[ext_resource type="Script" uid="uid://bp6uegn5u65gl" path="res://scripts/components/interactable_component.gd" id="1_hxtm7"]
[ext_resource type="Texture2D" uid="uid://dxciof8l5x6so" path="res://resources/interactable_bubble.tres" id="2_udq72"]
[ext_resource type="Texture2D" uid="uid://da7q6at2qvu3l" path="res://assets/icons/generic_button_circle_outline.png" id="3_mdtnt"]

[node name="InteractableComponent" type="Node3D"]
script = ExtResource("1_hxtm7")

[node name="InteractHintGroup" type="Node3D" parent="."]

[node name="HintBubble" type="Sprite3D" parent="InteractHintGroup"]
texture = ExtResource("2_udq72")

[node name="HintRing" type="Sprite3D" parent="InteractHintGroup"]
texture = ExtResource("3_mdtnt")
